# AI-Blog-and-Newsletter-automation-

./: .env.example  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: page_routes.py  routes.py
app/core/: config.py
app/models/: email_log.py  subscriber.py
app/schemas/: subscriber.py
app/services/: email_service.py
app/static/css/: style.css
app/static/js/: app.js
app/tasks/: email_tasks.py  scheduled_tasks.py
app/templates/: articles.html  base.html  dashboard.html  email.html  generate.html  newsletters.html  subscribers.html  task_monitor.html  topics.html
app/templates/components/: footer.html  navbar.html  sidebar.html
app/workers/: celery_app.py
streamlit_app/: Dockerfile  app.py
streamlit_app/page_modules/: email_campaigns.py  subscribers.py
