[project]
name = "ai-blog-newsletter-platform"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "amqp>=5.3.1",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "email-validator>=2.3.0",
    "fastapi>=0.138.0",
    "jinja2>=3.1.6",
    "langchain>=1.3.10",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.6",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "streamlit>=1.58.0",
    "uvicorn[standard]>=0.49.0",
]
