[project]
name = "ai-blog-newsletter-platform"
version = "0.6.0"
description = "AI Blog + Newsletter Automation Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "langgraph>=0.2.0",
    "celery>=5.3.0",
    "amqp>=5.2.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "resend>=2.0.0",
    "email-validator>=2.1.0",
    "flower>=2.0.0",
]

[tool.uv]
package = false